--- a/discode-web/src/app/home/home.component.scss
+++ b/discode-web/src/app/home/home.component.scss
@@ -1,36 +1,41 @@
-.side-nav{
-    width: 35%;
+.side-nav {
+    max-width: 250px;
     min-width: 200px;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+    height: 83vh;
     margin: 10px 10px 0px 10px;
+    align-items: center;
 }
 
-.chats{
-    align-items: center;    
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+.create-chat {
     margin-top: 20px;
-    overflow: auto;
-}
-
-.chat{
-    margin-bottom: 20px;
-    margin-top: 20px;
-    width: 90%;
-}
-
-.create-chat{
     border: none;
     border-radius: 100%;
     padding: 20px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
-    margin: 5px 10px;
     cursor: pointer;
+}
+
+.chats {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    overflow: auto;
+}
+
+.chat-btn {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 80%;
+    height: 40px;
+    max-height: 40px;
+    min-height: 40px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
