--- a/discode-web/src/app/home/home.component.scss
+++ b/discode-web/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
 .side-nav {
-    max-width: 250px;
+    max-width: 300px;
     min-width: 200px;
     height: 83vh;
     margin: 10px 10px 0px 10px;
@@ -39,3 +39,19 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    img{
+        max-width:50%;
+        max-height:50%;
+        min-width: 200px;
+        min-height: 200px;
+    }
+}
+
