--- a/discode-web/src/styles.scss
+++ b/discode-web/src/styles.scss
@@ -157,3 +157,21 @@ a:hover {
 .fg-discode-dark-green {
     color: $discode-dark-green !important;
 }
+
+/* scrollbar */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+background: $discode-grey; 
+}
+
+::-webkit-scrollbar-thumb {
+background: $discode-dark; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+background: $discode-darker; 
+}
