--- a/discode-web/src/app/home/chat-room/chat-room.component.html
+++ b/discode-web/src/app/home/chat-room/chat-room.component.html
@@ -1,3 +1,4 @@
+<p>{{chatName}}</p>
 <div class="d-flex align-items-center chat-room-div">
     <div class="d-flex-row chat-room-top-div">
         
@@ -9,8 +10,7 @@
         </div>
         <div class="d-flex chat-room-members bg-discode-darker">
             <ul class='d-flex chat-room-members-list'>
-                <li>Member 1</li>
-                <li>Member 2</li>
+                <li *ngFor="let member of chatMembers">{{member.userId}}</li>
             </ul>
         </div>
     </div>
