Implement create chat functionality

--- a/discode-web/src/app/home/home.component.html
+++ b/discode-web/src/app/home/home.component.html
@@ -1,22 +1,46 @@
 <div class="row">
     <div class="col side-nav bg-discode-darker  d-flex">
         <label style="text-align: center; padding: 20px; font-size: 16px;">Create new chat</label>
-        <button type="button" class=" btn btn-primary btn-discode-green create-chat">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                viewBox="0 0 16 16">
+        <button type="button" class=" btn btn-primary btn-discode-green create-chat" (click)="openModal()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
                 <path
                     d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
             </svg>
         </button>
+
         <div class="chats btn-group-vertical bg-discode-darkest" data-bs-spy="scroll">
             <button type="button" class="chat-btn btn btn-primary btn-discode-green btn-rounded"
-                *ngFor="let chat of chatList" (click)="chatClick(chat.chatId, chat.chatName)">{{chat.chatName}} </button>
+                *ngFor="let chat of chatList" (click)="chatClick(chat.chatId, chat.chatName)">{{chat.chatName}}
+            </button>
         </div>
     </div>
+    <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Create new chat</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="onCloseHandled()"></button>
+            </div>
+            <div class="modal-body">
+                <form class="form-discode-blue" [formGroup]="createChatFormGroup">
+                    <div class="mb-4 border-primary">
+                      <label class="form-label">Name</label>
+                      <input type="text" id="chatName" placeholder="Chat name" class="form-control" formControlName="chatName" />
+                    </div>
+                  </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary btn-discode-dark" data-bs-dismiss="modal" (click)="onCloseHandled()">Cancel</button>
+              <button type="button" class="btn btn-primary btn-discode-green" [disabled]="this.createChatFormGroup.invalid" (click)="createChat()">Create</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     <div class="col">
         <app-chat-room *ngIf="isChatSelected" chatName="{{selectedChat}}" [chatMembers]="chatMembers"></app-chat-room>
         <div *ngIf="!isChatSelected" class="center">
-            <img src="assets/welcome_cats.svg" alt="welcome" >    
+            <img src="assets/welcome_cats.svg" alt="welcome">  
         </div>
     </div>
 </div>
