--- a/discode-web/src/styles.scss
+++ b/discode-web/src/styles.scss
@@ -175,3 +175,7 @@ background: $discode-dark;
 ::-webkit-scrollbar-thumb:hover {
 background: $discode-darker; 
 }
+
+.modal-content {
+    background-color: $discode-grey;
+ }
