--- a/discode-web/src/app/home/chat-room/chat-room.component.html
+++ b/discode-web/src/app/home/chat-room/chat-room.component.html
@@ -1,7 +1,20 @@
-<p>{{chatName}}</p>
+<div ngbDropdown class="dropdown chat-title">
+    <button ngbDropdownToggle class="btn btn-discode-darker" type="button" id="dropdownMenuButton1"
+        aria-expanded="false" style="font-size: 16px;">
+        {{chatName}}
+    </button>
+    <ul ngbDropdownMenu aria-labelledby="dropdownMenuButton1">
+        <li><a class="menu-list" ngbDropdownItem (click)="addMember()">Add member</a></li>
+        <li><a class="menu-list" ngbDropdownItem (click)="removeMember()">Remove member</a></li>
+        <li><a class="menu-list" ngbDropdownItem (click)="deleteChat()">Delete chat</a></li>
+    </ul>
+</div>
+
+<hr class="solid">
 <div class="d-flex align-items-center chat-room-div">
+
     <div class="d-flex-row chat-room-top-div">
-        
+
         <div class="d-flex chat-room-messages">
             <ul class='d-flex chat-room-message-list'>
                 <li>Message 1</li>
@@ -10,12 +23,18 @@
         </div>
         <div class="d-flex chat-room-members bg-discode-darker">
             <ul class='d-flex chat-room-members-list'>
-                <li *ngFor="let member of chatMembers">{{member.userId}}</li>
+                <li *ngFor="let member of chatMembers">{{member.firstName + " " + member.lastName}}</li>
             </ul>
         </div>
     </div>
-   
+
     <div class="d-flex chat-room-input-box bg-discode-darkest">
-        <h1>User Input Box</h1>
+        <form class="form-discode-blue">
+            <div class="mb-4 border-primary">
+                <textarea rows="3" cols="60" name="message" class="form-control" placeholder="..." style="resize: none;"></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-block mb-4">Send</button>
+        </form>
     </div>
 </div>
