Minor frontend modifications

--- a/discode-web/src/app/home/chat-room/chat-room.component.html
+++ b/discode-web/src/app/home/chat-room/chat-room.component.html
@@ -3,7 +3,7 @@
         aria-expanded="false" style="font-size: 16px;">
         {{chatName}}
     </button>
-    <ul ngbDropdownMenu aria-labelledby="dropdownMenuButton1">
+    <ul ngbDropdownMenu aria-labelledby="dropdownMenuButton1" class="bg-discode-darker">
         <li><a class="menu-list" ngbDropdownItem (click)="addMember()">Add member</a></li>
         <li><a class="menu-list" ngbDropdownItem (click)="removeMember()">Remove member</a></li>
         <li><a class="menu-list" ngbDropdownItem (click)="deleteChat()">Delete chat</a></li>
