--- a/discode-web/src/app/home/chat-room/chat-room.component.scss
+++ b/discode-web/src/app/home/chat-room/chat-room.component.scss
@@ -1,27 +1,27 @@
 .chat-room-div {
-    height: 100%;
+    height: 90%;
     padding-right: 10px;
 }
 
-.chat-room-div > div, .chat-room-top-div > div {
+.chat-room-div > div,
+.chat-room-top-div > div {
     border-radius: 4px;
 }
 
 .chat-room-top-div {
     min-width: 100%;
-    min-height: 75%;
+    min-height: 85%;
     margin-bottom: 10px;
 }
 
 .chat-room-messages {
-    min-height: 50%;
     min-width: 90%;
     flex-direction: column-reverse;
 }
 
 .chat-room-members {
     min-width: 10%;
-    height: 80%;
+
 }
 
 .chat-room-input-box {
@@ -30,7 +30,7 @@
     text-align: center;
 }
 
-.chat-title{
+.chat-title {
     font-weight: bold;
     text-align: center;
     margin-bottom: 0px;
@@ -43,34 +43,34 @@ hr.solid {
     margin-top: 0px;
 }
 
-.menu-list{
+.menu-list {
     cursor: pointer;
 }
 
-.member-list{
+.member-list {
     display: flex;
     margin: 5px;
 
-    p{
+    p {
         width: 50%;
         padding: 5px;
         overflow: hidden;
     }
 
-    .btn-discode-green{
+    .btn-discode-green {
         padding: 5px;
         height: 35px;
     }
 }
 
-.send-message-form{
+.send-message-form {
     display: flex;
 
-    .message-box{
+    .message-box {
         width: 90%;
     }
 
-    .send-message{
+    .send-message {
         height: 40px;
         width: 90px;
         margin: 15px;
