Add message component

--- a/discode-web/src/app/home/chat-room/chat-room.component.html
+++ b/discode-web/src/app/home/chat-room/chat-room.component.html
@@ -75,10 +75,13 @@
   <div class="d-flex-row chat-room-top-div">
 
     <div class="d-flex chat-room-messages">
-      <ul class='d-flex chat-room-message-list'>
-        <li>Message 1</li>
-        <li>Message 2</li>
-      </ul>
+      <app-message message="Message 1" time="12:30"></app-message>
+      <app-message message="Message 2" time="12:31"></app-message>
+      <app-message message="Message 3" time="12:32"></app-message>
+      <app-message message="Message 4" time="12:33"></app-message>
+      <app-message message="Message 5" time="12:33"></app-message>
+      <app-message message="Message 6" time="12:36"></app-message>
+
     </div>
     <div class="d-flex chat-room-members bg-discode-darker">
       <ul class='d-flex chat-room-members-list'>
