--- a/discode-web/src/app/home/chat-room/chat-room.component.html
+++ b/discode-web/src/app/home/chat-room/chat-room.component.html
@@ -71,17 +71,14 @@
 </div>
 
 <div class="d-flex align-items-center chat-room-div">
-
   <div class="d-flex-row chat-room-top-div">
-
     <div class="d-flex chat-room-messages">
       <app-message message="Message 1" time="12:30"></app-message>
       <app-message message="Message 2" time="12:31"></app-message>
-      <app-message message="Message 3" time="12:32"></app-message>
+      <app-message message="Message 111111111111111111111111111111111111111111111111111111111111111111111113" time="12:32"></app-message>
       <app-message message="Message 4" time="12:33"></app-message>
       <app-message message="Message 5" time="12:33"></app-message>
       <app-message message="Message 6" time="12:36"></app-message>
-
     </div>
     <div class="d-flex chat-room-members bg-discode-darker">
       <ul class='d-flex chat-room-members-list'>
