--- a/discode-web/src/app/home/chat-room/chat-room.component.html
+++ b/discode-web/src/app/home/chat-room/chat-room.component.html
@@ -73,12 +73,7 @@
 <div class="d-flex align-items-center chat-room-div">
   <div class="d-flex-row chat-room-top-div">
     <div class="d-flex chat-room-messages">
-      <app-message message="Message 1" time="12:30"></app-message>
-      <app-message message="Message 2" time="12:31"></app-message>
-      <app-message message="Message 111111111111111111111111111111111111111111111111111111111111111111111113" time="12:32"></app-message>
-      <app-message message="Message 4" time="12:33"></app-message>
-      <app-message message="Message 5" time="12:33"></app-message>
-      <app-message message="Message 6" time="12:36"></app-message>
+      <app-message *ngFor="let message of messages" [message]="message"></app-message>
     </div>
     <div class="d-flex chat-room-members bg-discode-darker">
       <ul class='d-flex chat-room-members-list'>
@@ -90,13 +85,13 @@
   </div>
 
   <div class="d-flex chat-room-input-box bg-discode-darkest">
-    <form class="form-discode-blue send-message-form">
+    <form class="form-discode-blue send-message-form" role="sendMessage" [formGroup]="messageFormGroup">
       <div class="mb-4 border-primary message-box">
-        <textarea rows="3" cols="60" name="message" class="form-control" placeholder="..."
-          style="resize: none;"></textarea>
+        <textarea name="sendMessage" rows="3" cols="60" name="message" class="form-control" placeholder="..."
+          style="resize: none;" formControlName="message"></textarea>
       </div>
 
-      <button type="submit" class="btn btn-primary btn-block mb-4 send-message">Send</button>
+      <button type="submit" class="btn btn-primary btn-block mb-4 send-message" [disabled]="this.messageFormGroup.invalid" (click)="sendMessage()">Send</button>
     </form>
   </div>
 </div>
