--- a/discode-web/src/app/home/chat-room/chat-room.component.scss
+++ b/discode-web/src/app/home/chat-room/chat-room.component.scss
@@ -18,7 +18,7 @@
 .chat-room-messages {
     min-width: 90%;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: flex-start;
     overflow: auto;
 }
