--- a/discode-web/src/app/home/message/message.component.html
+++ b/discode-web/src/app/home/message/message.component.html
@@ -1,6 +1,6 @@
 <div class="message-box">
     <div class="message-container d-flex-row">
-        <img src="https://icons.iconarchive.com/icons/papirus-team/papirus-status/512/avatar-default-icon.png" alt="Avatar" class="message-profile-pic">
+        <img src="http://localhost:8008/api/images/default.png" alt="Avatar" class="message-profile-pic">
         <div>
             <div class="d-flex-row message-info">
                 <span class="username">{{message?.author?.username}}</span>
