--- a/discode-web/src/app/home/chat-room/chat-room.component.scss
+++ b/discode-web/src/app/home/chat-room/chat-room.component.scss
@@ -12,16 +12,16 @@
     height: 85%;
     max-height: 85%;
     min-width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 10px; ;
 }
 
 .chat-room-messages {
     min-width: 90%;
     height: 100%;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     justify-content: flex-start;
-    overflow: auto;
+    overflow: scroll;
 }
 
 .chat-room-members {
