--- a/discode-web/src/app/home/chat-room/chat-room.component.scss
+++ b/discode-web/src/app/home/chat-room/chat-room.component.scss
@@ -81,3 +81,42 @@ hr.solid {
         margin: 15px;
     }
 }
+
+.code-modal{
+    padding: 0 !important; 
+    width: 100%;
+    height: 100%;
+
+    .modal-title{
+        text-align: center;
+    }
+
+    .modal-dialog {
+        width: 100%;
+        max-width: none;
+        height: 100%;
+        margin: 0;
+      }
+      
+      .modal-content {
+        height: 100%;
+        border: 0;
+        border-radius: 0;
+      }
+
+      .modal-body {
+        height: 100%;
+        overflow-y: auto;
+      }
+
+      .code{
+          padding-left: 10px;
+        height: 100%;
+      }
+
+    .code-area{
+        width: 100%;
+        height: 100%;
+    }
+}
+
